# DataStructures

./: .gitignore  CMakeLists.txt  README.md  main.c  run.bat
doc/: cmake_help.md
src/: CMakeLists.txt
src/c_toolkits/: wintools.c  wintools.h
src/structures/list/: core.h  list.h  sequence.c  sequence.h
test/: CMakeLists.txt  test_list.c  test_sequence.c
